2001-05-10  Paul Stodghill  <stodghil@cs.cornell.edu>

	* configure.in: Reverse the order of Windows and Linux sound tests
	so that	Cygwin will find Windows first.

2001-05-15  Steve Youngs  <youngs@xemacs.org>

	* etc/PACKAGES: Update to reflect new package dir tree.

2001-05-11  Martin Buchholz  <martin@xemacs.org>

	* configure.in: 
	Check for sys/ptyio.h on HPUX, else for pty.h or perhaps sys/pty.h

2001-05-10  Ben Wing  <ben@xemacs.org>

	* Makefile.in.in (all):
	* Makefile.in.in (configure):
	* Makefile.in.in (finder):
	remove autoload targets.

2001-04-26  Malcolm Purvis <malcolmpurvis@optushome.com.au>

	* configure.in: Check gtk version validity only when gtk-config
	exists.

2001-05-09  Martin Buchholz <martin@xemacs.org>

	* XEmacs 21.5.1 "anise" is released.

2001-01-31  Jason R. Mastaler  <jason@xemacs.org>

	* etc/FTP: Updated FTP mirrors list.

2001-05-04  Martin Buchholz  <martin@xemacs.org>

	* configure.in (opsys): 
	Use lower-case `uname -s` as the default value for opsys.
	The previous code effectively did the non-sensical
	opsys=$canonical because [] magically disappear in configure.in.

2001-04-18  Martin Buchholz  <martin@xemacs.org>

	* XEmacs 21.5.0 "alfalfa" is released.

2001-03-26  Paul Stodghill  <stodghil@cs.cornell.edu>

	* configure.in: Don't #define __STDC__ in confdefs.h

2001-03-30  Ben Wing  <ben@xemacs.org>

	* etc\sample.init.el:
	* etc\sample.init.el (Init-kill-entire-line):
	* etc\sample.init.el (describe-foo-at-point):
	* etc\sample.init.el (kill-current-buffer):
	* etc\sample.init.el (kill-current-buffer-and-window):
	* etc\sample.init.el (grep-c-files): Removed.
	* etc\sample.init.el (grep-all-files-history): New.
	* etc\sample.init.el (grep-all-files-omitted-expressions): New.
	* etc\sample.init.el (grep-all-files-omitted-directories): New.
	* etc\sample.init.el (construct-grep-all-files-command): New.
	* etc\sample.init.el (grep-all-files-in-current-directory): New.
	* etc\sample.init.el (grep-lisp-files): Removed.